--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+    <link href="/css/main.css" rel="stylesheet">
   
   </head>
 
